# subtools2

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.sh  tutorial_dynamic_project.html  tutorial_installation.html
.github/workflows/: make-docs.yml
_sources/: index.md.txt  tutorial_installation.md.txt
api/: api.html
api/core/: config.html  data_builder.html  feature_extractor.html  loads.html  module.html  optimization.html  parser.html  teacher.html  tokenizer.html
api/pipeline/: index.html
api/utils/: egrecho.utils.dummy.html  egrecho.utils.io.html  egrecho.utils.patch.html  egrecho.utils.patch.simple_parse_patch.annotation_utils.html  egrecho.utils.patch.simple_parse_patch.html  egrecho.utils.seeder.html  egrecho.utils.text.html  index.html
docs/: .build_docs.sh  .gitignore  .readthedocs.yaml  Makefile  README.md  gen_api_helper.py  requirements.txt
docs/source/: conf.py  index.md  index.rst  tutorial_dynamic_project.md
egrecho/core/: config.py  data_builder.py  feature_extractor.py  loads.py  model_base.py  model_out.py  module.py  onnx_export.py  parser.py  pl_parser.py  teacher.py  tokenizer.py
egrecho/garbage/: asv.py  base.py  common.py  cosine.py  data_builder.py  data_builder1.py  kaldi.py  (+6 more)
egrecho_cli/: __init__.py  __main__.py  register.py
requirements/: base.txt  dev.txt  pre_base_cpu.txt
scripts/: newCopyData.sh  run.pl
(+281 files in other folders)
