[metadata]
name = egrecho
author = Dexin Liao
license = Apache-2.0 License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8

[options.entry_points]
console_scripts =
        egrecho = egrecho_cli.__main__:main
